--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             </div>
             <nav class="nav" id="nav">
                 <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#Presentation">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Blog</a></li>
@@ -47,6 +47,38 @@
             </div>
         </div>
     </div>
+
+    <div class="Container">
+        <div id="Presentation">
+            <img src="./Assets/Images/Empecemos.png" alt="All we need is food">
+            <h1 class="Slogan">ALL WE <br> NEED IS <br> <b class="Food">FOOD</b></h1>
+        </div>
+
+        <div id="Services">
+            <h5 class="Ofrecer">¿Que Ofrecemos?</h5>
+            <h1 class="Land1">Tu Servicio de <br> Comida Favorito</h1>
+
+            <ul>
+                <li>
+                    <img src="./Assets/Images/Easy to order.png" class="Easy" alt="">
+                    <h2>Facil de <br>Ordenar</h2>
+                    <p>Pocos pasos para realizar tu pedido</p>
+                </li>
+                <li>
+                    <img src="./Assets/Images/fastest delivery.png" class="Delivery" alt="">
+                    <h2>Entregas <br> Eficientes</h2>
+                    <p>Entrega de pedidos siempre a tiempo</p>
+                </li>
+                <li>
+                    <img src="./Assets/Images/best quality.png" class="Quality" alt="">
+                    <h2>La Mejor <br> Calidad</h2>
+                    <p>Calidad Número 1 en la Ciudad</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
