--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
                         YU
                     <br/>
                         SE
+                    </p>
                 </div>
             </div>
         </div>
@@ -74,6 +75,52 @@
                     <h2>La Mejor <br> Calidad</h2>
                     <p>Calidad Número 1 en la Ciudad</p>
                 </li>
+            </ul>
+        </div>
+    </div>
+
+
+    <div id="Menu">
+        <h5 class="Our-Menu">Nuestro Menu</h5>
+        <h1 class="Land2">Hará que te Enamores <br>de Nosotros</h1>
+
+        <div class="Carrusel">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./Assets/Images/Pizza.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Assets/Images/hamburguesa.webp" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Assets/Images/Hot-dogs.webp" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Assets/Images/Sushi.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Assets/Images/patacones.webp" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+            
+        <div class="Menu-side">
+            <ul>
+                <li class="Menu-item">Pizza G + Bebida <br> <b>$10</b></li>
+                <li class="Menu-item">Hamburguesa W + Bebida <br> <b>$6</b></li>
+                <li class="Menu-item">Perro Caliente + Bebida <br> <b>$4</b></li>
+                <li class="Menu-item">10 Rol de Sushi + Bebida <br> <b>$8</b></li>
+                <li class="Menu-item">Patacon + Bebida <br> <b>$7</b></li>
             </ul>
         </div>
     </div>
