--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
             <nav class="nav" id="nav">
                 <ul>
                 <li><a href="#Presentation">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#Services">Servicio</a></li>
+                <li><a href="#Menu">Menu</a></li>
+                <li><a href="#">Postres</a></li>
+                <li><a href="#">Contacto</a></li>
                 </ul>
             </nav> 
             </div>
@@ -125,7 +125,33 @@
         </div>
     </div>
 
+    <br>
+    <br>
+    <br>
 
+    <div id="Postres">
+        <!-- <h5 class="Ofrecer">¿Necesitas un Dulce?</h5>
+        <h1 class="Land1">Te ofrecemos los <br> Mejores Postres</h1> -->
+
+        <div class="card" style="width: 18rem;">
+            <img src="./Assets/Images/Quesillo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Deleitate con una porción de nuestro <b>Quesillo</b>.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./Assets/Images/helado.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Te gustan los <b>Helados?</b> Pues tenemos variedad de sabores para tí.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./Assets/Images/Torta.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Si eres más de sabores clásicos, tenemos para tí nuestra exquisita porción de <b> Tora de Chcolate </b>.</p>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
