--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
                 <li><a href="#Presentation">Home</a></li>
                 <li><a href="#Services">Servicio</a></li>
                 <li><a href="#Menu">Menu</a></li>
-                <li><a href="#">Postres</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#Postres">Postres</a></li>
+                <li><a href="#Footer">Contacto</a></li>
                 </ul>
             </nav> 
             </div>
@@ -130,27 +130,84 @@
     <br>
 
     <div id="Postres">
-        <!-- <h5 class="Ofrecer">¿Necesitas un Dulce?</h5>
-        <h1 class="Land1">Te ofrecemos los <br> Mejores Postres</h1> -->
+        <h5 class="Our-Postres">¿Necesitas un Dulce?</h5>
+        <h1 class="Land3">Te ofrecemos los <br> Mejores Postres</h1>
 
-        <div class="card" style="width: 18rem;">
-            <img src="./Assets/Images/Quesillo.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Deleitate con una porción de nuestro <b>Quesillo</b>.</p>
+        <div class="Cards-P">
+            <div class="card" style="width: 18rem;">
+                <img src="./Assets/Images/Quesillo.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Deléitate con una porción de nuestro <b>Quesillo</b>.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./Assets/Images/helado.webp" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Te gustan los <b>Helados?</b> Pues tenemos variedad de sabores para tí.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./Assets/Images/Torta.webp" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Si eres más de sabores clásicos, tenemos para tí nuestra exquisita porción de <b> Tora de Chcolate </b>.</p>
+                </div>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="./Assets/Images/helado.webp" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Te gustan los <b>Helados?</b> Pues tenemos variedad de sabores para tí.</p>
+    </div>
+
+    <br>
+    <br>
+
+    <div class="footer-dark">
+        <footer id="Footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Services</h3>
+                        <ul>
+                            <li><a href="#">Web design</a></li>
+                            <li><a href="#">Development</a></li>
+                            <li><a href="#">Front-end Designer</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Tech Stack</h3>
+                        <ul>
+                            <li><a href="#">JavaScript | React | C++ | Java</a></li>
+                            <li><a href="#">MySQL</a></li>
+                            <li><a href="#">Illustrator | Photoshop</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>About Us</h3>
+                        <p>Hello! My name is Jose Portillo, I am 20 years old and I am a computer engineering student at the Dr. Rafael Belloso Chacín University (URBE), with an inclination towards front end web development</p>
+                    </div>
+                    <div class="col item social">
+                        <a href="https://www.t.me/yuseppe">
+                            <i class="icon ion-social-telegram">
+                                <img width="25em" src="./Assets/Images/telegram-svgrepo-com.svg" alt="">
+                            </i>
+                        </a>
+                        <a href="https://github.com/Yu13ppe">
+                            <i class="icon ion-social-github">
+                                <img width="30em" src="./Assets/Images/github-svgrepo-com.svg" alt="">
+                            </i>
+                        </a>
+                        <a href="mailto:joseportillo2002.jdpf@gmail.com">
+                            <i class="icon ion-social-gmail">
+                                <img width="28em" src="./Assets/Images/inbox-svgrepo-com.svg" alt="">
+                            </i>
+                        </a>
+                        <a href="https://www.instagram.com/josed.portillo/">
+                            <i class="icon ion-social-instagram">
+                                <img width="35em" src="./Assets/Images/instagram-svgrepo-com.svg" alt="">
+                            </i>
+                        </a>
+                    </div>
+                </div>
+                <p class="copyright">Jose Portillo © 2023</p>
             </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="./Assets/Images/Torta.webp" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Si eres más de sabores clásicos, tenemos para tí nuestra exquisita porción de <b> Tora de Chcolate </b>.</p>
-            </div>
-        </div>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
